tests/errors/SettingsError/filters/f01.exec
# format: exec
exec:--filter;asdf=2016-02-01;
